--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 init:
-	g++ main.cpp init.cpp loop.cpp finalize.cpp md5.cpp -o init_test
+	g++ -fopenmp main.cpp init.cpp loop.cpp finalize.cpp md5.cpp -o init_test
 
 clean:
 	rm init_test
